# Beginning-C-Plus-Games

./: .cproject  .gitignore  HangMan.cpp  README.md
BlackJack/: .cproject  .gitignore  CMakeLists.txt  Card.cpp  Card.h  Deck.cpp  Game.cpp  Game.h  GenericPlayer.cpp  GenericPlayer.h  Hand.cpp  Hand.h  blackjack.cpp
BlackJack/scripts/: build.sh
Creature/: abstract_creature.cpp
Critter/: .cproject  .project  Critter.cpp  Critter.h  Critter.hpp
Critter/Debug/: Critter  Critter.d  makefile  subdir.mk
FunGames/: FunGames.sln
FunGames/Debug/: FunGames.ilk
FunGames/FunGames/: FunGames.cpp  FunGames.vcxproj  FunGames.vcxproj.filters  stdafx.cpp
FunGames/FunGames/Debug/: FunGames.pch  vc141.idb
FunGames/FunGames/Debug/FunGames.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FunGames.lastbuildstate  (+3 more)
GameLobby/: .cproject  .project  GameLobby.cpp  GameLobby.h
HangMan/: .cproject  .project  HangMan.cpp  HangMan.h
HangMan/Debug/: FunWithCPlus  HangMan  HangMan.d  makefile  subdir.mk
MabLib/: .cproject  .project  madlib.cpp  madlib.h
MabLib/Debug/: MabLib  madlib.d  makefile  subdir.mk
PlayThing/: .cproject  .project  PlayThing.cpp
PlayThing/Debug/: PlayThing  makefile
PlayThing/Debug/src/: PlayThing.d  subdir.mk
PlayThing/src/: PlayThing.cpp
ScrabblePad/: .cproject  .project  Scrabble.cpp  Scrabble.h
ScrabblePad/Debug/: Scrabble.d  ScrabblePad  makefile  subdir.mk
SimpleBoss/: .cproject  .project  simple_boss2.cpp
Tic-Tac-Toe/: .cproject  TicTacToe.cpp  TicTacToe.h
Tic-Tac-Toe/Debug/: Tic-Tac-Toe  TicTacToe.d  makefile  subdir.mk
